# reflex_uv_prueba

./: .env  .gitignore  compose.yml  pas.txt  pyproject.toml  requirements.txt  rxconfig.py  web.Dockerfile
.agents/: AGENTS.md
.agents/skills/comprobacion_api/: SKILL.md
.agents/skills/validacion_register/: SKILL.md
.agents/skills/validacion_register/scripts/: validate.py
reflex_uv/: reflex_uv.py
reflex_uv/api/: api.py  auth.py
reflex_uv/components/: footer.py  navbar.py
reflex_uv/layouts/: baselayout.py
reflex_uv/layouts/protected/: protected_routes.py
reflex_uv/navigation/: routes.py
reflex_uv/pages/: autorizado.py  contacto.py  index.py  upload.py
reflex_uv/pages/auth/: login.py  register.py
reflex_uv/state/: state.py
reflex_uv/styles/: colors.py  fonts.py  size.py  spacing.py  styles.py
reflex_uv/utils/: utils.py
